trunk/tests/kiama/negative/name_errors/L1/7_const3.ob
MODULE const;

CONST    
    aconst1 = 1;

BEGIN
    aconst1 := 42
END const.
